--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         </activity>
 
         <activity android:name=".VoterMenuActivity"/>
-
+        <activity android:name=".DetailsActivity"/>
     </application>
 
 </manifest>
