--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,9 +18,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".VoterMenuActivity"/>
         <activity android:name=".DetailsActivity"/>
+        <activity android:name=".SignupActivity"/>
     </application>
 
 </manifest>
