--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".VoterMenuActivity"/>
         <activity android:name=".DetailsActivity"/>
         <activity android:name=".SignupActivity"/>
+        <activity android:name=".VerifyOTPActivity"/>
     </application>
 
 </manifest>
