Add party database and make other necessary changes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".VoterActivity"/>
         <activity android:name=".VerifyOtp2Activity"/>
         <activity android:name=".NewPasswordActivity"/>
+        <activity android:name=".VoteMenuActivity"/>
     </application>
 
 </manifest>
