Add vote cast and update voter delete logic

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,8 @@
         <activity android:name=".VerifyOtp2Activity"/>
         <activity android:name=".NewPasswordActivity"/>
         <activity android:name=".VoteMenuActivity"/>
+        <activity android:name=".VoteCountActivity"/>
+
     </application>
 
 </manifest>
