Add vote declare and check result

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".NewPasswordActivity"/>
         <activity android:name=".VoteMenuActivity"/>
         <activity android:name=".VoteCountActivity"/>
+        <activity android:name=".CheckResultActivity"/>
 
     </application>
 
